--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang=ru>
+<html lang="ru">
 <head>
-	<meta charset=UTF-8>
-	<meta name=viewport content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Картины.art - портрет на холсте</title>
-	<link rel=stylesheet href=assets/css/bootstrap.css>
+	<link rel="stylesheet" href="assets/css/bootstrap.css">
 	<link rel="stylesheet" href="assets/css/animate.css">
-	<link rel=stylesheet href=assets/css/main.css>
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 	<img class="fixed-gift wow pulse infinite" src=assets/img/gift.png alt>
-	<header class=header>
-		<div class=container>
+	<header class="header">
+		<div class="container">
 			<div class="col-md-2 col-sm-3 col-xs-6">
-				<button class=burger>
-					<img src=assets/img/burger.svg alt><span>Каталог товаров</span>
+				<button class="burger">
+					<img src="assets/img/burger.svg" alt><span>Каталог товаров</span>
 				</button>
-				<ul class=burger-menu>
+				<ul class="burger-menu">
 					<li>
 						<a href="#">Картина из вашего фото</a>
 					</li>
@@ -32,158 +32,158 @@
 				</ul>
 			</div>
 			<div class="col-md-8 hidden-sm hidden-xs">
-				<ul class=header-menu>
+				<ul class="header-menu">
 					<li>
 						<a href="#">Картина из вашего фото</a>
 						<ul class="burger-menu header-menu-sub">
-							<li><a href=#styles>Фотомозаика</a></li>
-							<li><a href=#styles>Шарж по фото</a></li>
-							<li><a href=#styles>Love is...</a></li>
+							<li><a href="#styles">Фотомозаика</a></li>
+							<li><a href="#styles">Шарж по фото</a></li>
+							<li><a href="#styles">Love is...</a></li>
 						</ul>
 					</li>
 					<li>
 						<a href="#">Готовые картины</a>
 						<ul class="burger-menu header-menu-sub">
-							<li><a href=#portfolio>Портрет</a></li>
-							<li><a href=#portfolio>Живопись</a></li>
-							<li><a href=#portfolio>Коллаж</a></li>
+							<li><a href="#portfolio">Портрет</a></li>
+							<li><a href="#portfolio">Живопись</a></li>
+							<li><a href="#portfolio">Коллаж</a></li>
 						</ul>
 					</li>
 					<li>
 						<a href="#">Идеи подарков</a>
 						<ul class="burger-menu header-menu-sub">
-							<li><a href=#portfolio>Готовые картины</a></li>
-							<li><a href=#portfolio>Интерьерные постеры</a></li>
+							<li><a href="#portfolio">Готовые картины</a></li>
+							<li><a href="#portfolio">Интерьерные постеры</a></li>
 						</ul>
 					</li>
 					<li>
 						<a href="#">Покупателям</a>
 						<ul class="burger-menu header-menu-sub">
-							<li><a href=#often-questions>Срочное изготовление</a></li>
-							<li><a href=#often-questions>Доставка и оплата</a></li>
-							<li><a href=#scheme>Схема работы</a></li>
-							<li><a href=#footer>Контакты</a></li>
-						</ul>
+							<li><a href="#often-questions">Срочное изготовление</a></li>
+							<li><a href="#often-questions">Доставка и оплата</a></li>
+							<li><a href="#scheme">Схема работы</a></li>
+							<li><a href="#footer">Контакты</a></li>
+						</ul>"
 					</li>
 				</ul>
 			</div>
 			<div class="col-md-2 col-md-offset-0 col-sm-3 col-sm-offset-6 col-xs-6">
-				<div class=button-wrap>
-					<button class="button button-order button-design">Заказать<img src=assets/img/button-right-arrow.svg alt></button>
+				<div class="button-wrap">
+					<button class="button button-order button-design">Заказать<img src="assets/img/button-right-arrow.svg" alt></button>
 				</div>
 			</div>
 		</div>
 	</header>
-	<main class=main>
-		<div class=container>
-			<div class=row>
+	<main class="main">
+		<div class="container">
+			<div class="row"
 				<div class="col-md-3 col-sm-4 col-xs-5">
-					<p class=logo>Картины.art</p>
-					<p class=logo-p>Преврати фотографию в настоящую картину!</p>
+					<p class="logo">Картины.art</p>
+					<p class="logo-p">Преврати фотографию в настоящую картину!</p>
 				</div>
 				<div class="col-md-3 col-md-offset-3 col-sm-offset-0 col-sm-4 hidden-xs">
-					<div class=file_upload>
-						<button type=button>Загрузить фотографию</button>
+					<div class="file_upload">
+						<button type="button">Загрузить фотографию</button>
 						<div>Файл не выбран</div>
-						<input type=file name=upload>
+						<input type="file" name="upload">
 					</div>
-					<p class=email>E-mail: <a href=mailto:info@kartiny.art>info@kartiny.art</a></p>
+					<p class="email">E-mail: <a href="mailto:info@kartiny.art">info@kartiny.art</a></p>
 				</div>
 				<div class="col-md-3 col-sm-4 col-xs-7">
-					<p class=phone>8 800 234-23-34</p>
-					<p class=phone-whatsapp><img class=icons src=assets/img/telephone.svg alt><img class=icons src=assets/img/whatsapp.svg alt> +7 495 234-23-34</p>
+					<p class="phone">8 800 234-23-34</p>
+					<p class="phone-whatsapp"><img class="icons" src="assets/img/telephone.svg" alt><img class="icons" src="assets/img/whatsapp.svg" alt> +7 495 234-23-34</p>
 				</div>
 			</div>
-			<div class=row>
-				<div class=col-md-7>
-					<div class=main-slider>
-						<div class=main-slider-item>
-							<img src=assets/img/main-1.png alt>
+			<div class="row">
+				<div class="col-md-7">
+					<div class="main-slider">
+						<div class="main-slider-item"
+							<img src="assets/img/main-1.png" alt>
 						</div>
-						<div class=main-slider-item>
-							<img src=assets/img/main-2.png alt>
+						<div class="main-slider-item">
+							<img src="assets/img/main-2.png" alt>
 						</div>
 					</div>
 				</div>
-				<div class=col-md-5>
-					<p class=p-heading-italic>Лучший подарок для всех</p>
+				<div class="col-md-5">
+					<p class="p-heading-italic">Лучший подарок для всех</p>
 					<h1 class="wow fadeInUp">Портрет на холсте</h1>
 					<div class=row>
 						<div class="col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-3">
-							<p class=main-features><img src=assets/img/checked.svg alt>Гарантия минимальной цены</p>
+							<p class="main-features"><img src="assets/img/checked.svg" alt>Гарантия минимальной цены</p>
 						</div>
 						<div class="col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-3">
-							<p class=main-features><img src=assets/img/checked.svg alt>На 30% дешевле конкурентов</p>
+							<p class="main-features"><img src="assets/img/checked.svg" alt>На 30% дешевле конкурентов</p>
 						</div>
 						<div class="col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-3">
-							<p class=main-features><img src=assets/img/checked.svg alt>При заказе с сайта скидки до 30%!</p>
+							<p class="main-features"><img src="assets/img/checked.svg" alt>При заказе с сайта скидки до 30%!</p>
 						</div>
 						<div class="col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-3">
-							<p class=main-features><img src=assets/img/checked.svg alt>Срочное изготовление за 3 часа!</p>
+							<p class="main-features"><img src="assets/img/checked.svg" alt>Срочное изготовление за 3 часа!</p>
 						</div>
 					</div>
-					<p class=p-button>Отправьте фото сейчас и получите дизайн через 1 час</p>
-					<button class="button button-order button-design"><img class=button-order-img src=assets/img/button-arrow.png alt>Заказать портрет</button>
+					<p class="p-button">Отправьте фото сейчас и получите дизайн через 1 час</p>
+					<button class="button button-order button-design"><img class="button-order-img" src="assets/img/button-arrow.png" alt>Заказать портрет</button>
 				</div>
 			</div>
 		</div>
 	</main>
-	<section class=promo>
-		<div class=container>
-			<div class=col-md-7>
-				<img class=promo-img src=assets/img/promo-1.png alt>
+	<section class="promo">
+		<div class="container">
+			<div class="col-md-7">
+				<img class="promo-img" src="assets/img/promo-1.png" alt>
 			</div>
-			<div class=col-md-5>
+			<div class="col-md-5">
 				<p>Просто отправьте фото и</p>
 				<h2 class="wow fadeInUp">Мы пришлем вам дизайн бесплатно в течение 1 часа!</h2>
 				<button class="button button-order button-design">Заказать дизайн портрета</button>
 			</div>
 		</div>
-		<img class=palette src=assets/img/palette.png alt>
+		<img class="palette" src="assets/img/palette.png" alt>
 	</section>
-	<section class=styles id=styles>
-		<div class=container>
-			<p class=p-heading>Портрет на холсте</p>
+	<section class="styles" id="styles">
+		<div class="container">
+			<p class="p-heading">Портрет на холсте</p>
 			<h2>Популярные стили рисунка</h2>
-			<div class=row>
+			<div class="row">
 				<div class="col-sm-3 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-					<div class=styles-block>
+					<div class="styles-block">
 						<img src=assets/img/styles-1.jpg alt>
 						<h4>Маслом</h4>
 						<a href="#">Подробнее</a>
 					</div>
 				</div>
 				<div class="col-sm-3 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-					<div class=styles-block>
-						<img src=assets/img/styles-2.jpg alt>
+					<div class="styles-block">
+						<img src="assets/img/styles-2.jpg" alt>
 						<h4>Акварелью</h4>
 						<a href="#">Подробнее</a>
 					</div>
 				</div>
 				<div class="col-sm-3 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-					<div class=styles-block>
-						<img src=assets/img/styles-3.jpg alt>
+					<div class="styles-block">
+						<img src="assets/img/styles-3.jpg" alt>
 						<h4>Карандашом</h4>
 						<a href="#">Подробнее</a>
 					</div>
 				</div>
 				<div class="col-sm-3 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-					<div class=styles-block>
-						<img src=assets/img/styles-4.jpg alt>
+					<div class="styles-block">
+						<img src="assets/img/styles-4.jpg" alt>
 						<h4>Ручкой</h4>
 						<a href="#">Подробнее</a>
 					</div>
 				</div>
 				<div class="hidden-lg hidden-md hidden-sm hidden-xs styles-2">
-					<div class=styles-block>
-						<img src=assets/img/styles-5.jpg alt>
+					<div class="styles-block">
+						<img src="assets/img/styles-5.jpg" alt>
 						<h4>Пастелью</h4>
 						<a href="#">Подробнее</a>
 					</div>
 				</div>
 				<div class="hidden-lg hidden-md hidden-sm hidden-xs styles-2">
-					<div class=styles-block>
-						<img src=assets/img/styles-6.jpg alt>
+					<div class="styles-block">
+						<img src="assets/img/styles-6.jpg" alt>
 						<h4>Поп-арт</h4>
 						<a href="#">Подробнее</a>
 					</div>
