--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 	</header>
 	<main class="main">
 		<div class="container">
-			<div class="row"
+			<div class="row">
 				<div class="col-md-3 col-sm-4 col-xs-5">
 					<p class="logo">Картины.art</p>
 					<p class="logo-p">Преврати фотографию в настоящую картину!</p>
