--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
 			<div class="row">
 				<div class="col-md-7">
 					<div class="main-slider">
-						<div class="main-slider-item"
+						<div class="main-slider-item">
 							<img src="assets/img/main-1.png" alt>
 						</div>
 						<div class="main-slider-item">
