commet hidden cards

--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
 						<a href="#">Подробнее</a>
 					</div>
 				</div>
-				<div class="hidden-lg hidden-md hidden-sm hidden-xs styles-2">
+				<!-- <div class="hidden-lg hidden-md hidden-sm hidden-xs styles-2">
 					<div class="styles-block">
 						<img src="assets/img/styles-5.jpg" alt>
 						<h4>Пастелью</h4>
@@ -201,7 +201,7 @@
 						<h4>Шарж</h4>
 						<a href="#">Подробнее</a>
 					</div>
-				</div>
+				</div> -->
 			</div>
 			<button class="button button-transparent button-styles">Посмотреть больше стилей</button>
 		</div>
