--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="assets/css/aos.css" />
 </head>
 <body>
-	<img class="fixed-gift wow pulse infinite" src=assets/img/gift.png alt>
+	<img class="fixed-gift wow pulse infinite" src="assets/img/gift.png" alt>
 	<header class="header">
 		<div class="container">
 			<div class="col-md-2 col-sm-3 col-xs-6">
@@ -109,7 +109,7 @@
 				<div class="col-md-5">
 					<p class="p-heading-italic">Лучший подарок для всех</p>
 					<h1 class="wow fadeInUp">Портрет на холсте</h1>
-					<div class=row>
+					<div class="row">
 						<div class="col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-3">
 							<p class="main-features"><img src="assets/img/checked.svg" alt>Гарантия минимальной цены</p>
 						</div>
@@ -159,7 +159,7 @@
 			<div class="row">
 				<div class="col-sm-3 col-sm-offset-0 col-xs-10 col-xs-offset-1">
 					<div class="styles-block">
-						<img src=assets/img/styles-1.jpg alt>
+						<img src="assets/img/styles-1.jpg" alt>
 						<h4>Маслом</h4>
 						<a href="#">Подробнее</a>
 					</div>
@@ -216,7 +216,7 @@
 			</div>
 			<button class="button button-transparent button-styles">Посмотреть больше стилей</button>
 		</div>
-		<img class=paints src=assets/img/paints.png alt>
+		<img class="paints" src="assets/img/paints.png" alt>
 	</section>
 	<section
 		class="card card-1 wow fadeIn"
@@ -224,16 +224,16 @@
 		data-aos-offset="-200"
 		data-aos-once="true"
 	>
-		<div class=container>
-			<div class=card-block>
+		<div class="container">
+			<div class="card-block">
 				<div class=row>
 					<div class="col-md-4 col-md-offset-1 col-sm-4 col-sm-offset-1">
-						<img src=assets/img/card-1.png alt>
+						<img src="assets/img/card-1.png" alt>
 					</div>
 					<div class="col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1">
-						<div class=card-block-text>
+						<div class="card-block-text">
 							<h3>Потрясающий портрет флип-флап в стиле поп арт</h3>
-							<p class=p-heading>Вы подарите яркие эмоции, запомнится надолго!</p>
+							<p class="p-heading">Вы подарите яркие эмоции, запомнится надолго!</p>
 							<button class="button button-order button-consultation  wow zoomIn">Подробнее об услуге</button>
 						</div>
 					</div>
@@ -247,32 +247,32 @@
 		data-aos-offset="-200"
 		data-aos-once="true"
 	>
-		<div class=container>
-			<p class=p-heading>Калькулятор</p>
+		<div class="container">
+			<p class="p-heading">Калькулятор</p>
 			<h2>Рассчитайте стоимость и получите скидку 30%</h2>
-			<div class=row>
+			<div class="row">
 				<div class="col-md-4 col-offset-1">
-					<form class="form calc-form" action=# method=POST enctype=multipart/form-data>
+					<form class="form calc-form" action="#" method="POST" enctype="multipart/form-data">
 						<h4>Загрузите свое фото</h4>
-						<div class=file_upload>
-							<button type=button>Загрузить фотографию</button>
+						<div class="file_upload">
+							<button type="button">Загрузить фотографию</button>
 							<div>Файл не выбран</div>
-							<input type=file name=upload>
+							<input type="file" name="upload">
 						</div>
-						<select id=size>
+						<select id="size">
 							<option value>Выберите размер картины</option>
 							<option value="500">40x50</option>
 							<option value="1000">50x70</option>
 							<option value="1500">70x70</option>
 							<option value="2000">70x100</option>
 						</select>
-						<select id=material>
+						<select id="material">
 							<option value>Выберите материал картины</option>
 							<option value="1" title="Изящный, позволяет легко создавать текстуру, подходит для декоративных картин маслом.">Холст из волокна</option>
 							<option value="1.2" title="Достаточно грубый и создает ощущение реальности, подходит для классических пейзажей, натюрмортов и портретов.">Льняной холст</option>
 							<option value="1.5" title="Изящный, подходит для всех типов реалистичных портретов.">Холст из натурального хлопка</option>
 						</select>
-						<select id=options>
+						<select id="options">
 							<option value="0">Дополнительные услуги</option>
 							<option value="1000">Покрытие арт-гелем</option>
 							<option value="2000">Экспресс-изготовление</option>
@@ -284,8 +284,8 @@
 					</form>
 				</div>
 				<div class="col-md-4 col-md-offset-2 hidden-sm hidden-xs">
-					<img src=assets/img/calc-1.png alt>
-					<p class=calc-text>Пропорциональный размер изображения рассчитывается автоматически. Если Вы хотите кадрировать изображение или просто узнать стоимость желаемого размера картины, снимите галочку с поля «Пропорциональный»</p>
+					<img src="assets/img/calc-1.png" alt>
+					<p class="calc-text">Пропорциональный размер изображения рассчитывается автоматически. Если Вы хотите кадрировать изображение или просто узнать стоимость желаемого размера картины, снимите галочку с поля «Пропорциональный»</p>
 				</div>
 			</div>
 		</div>
@@ -297,49 +297,49 @@
 		data-aos-offset="-200"
 		data-aos-once="true"
 	>
-		<div class=container>
-			<div class=p-heading>Примеры работ</div>
+		<div class="container">
+			<div class="p-heading">Примеры работ</div>
 			<h2>Для кого делаем портрет?</h2>
-			<ul class=portfolio-menu>
+			<ul class="portfolio-menu">
 				<li class="all active">Все работы</li>
-				<li class=lovers>Для влюбленных</li>
-				<li class=chef>Для шефа</li>
-				<li class=girl>Для девушки</li>
-				<li class=guy>Для парня</li>
-				<li class=grandmother>Для бабушки</li>
-				<li class=granddad>Для дедушки</li>
+				<li class="lovers">Для влюбленных</li>
+				<li class="chef">Для шефа</li>
+				<li class="girl">Для девушки</li>
+				<li class="guy">Для парня</li>
+				<li class="grandmother">Для бабушки</li>
+				<li class="granddad">Для дедушки</li>
 			</ul>
 		</div>
-		<div class=portfolio-wrapper>
+		<div class="portfolio-wrapper">
 			<div class="portfolio-block all girl">
-				<img src=assets/img/portfolio-1.jpg alt>
+				<img src="assets/img/portfolio-1.jpg" alt>
 			</div>
 			<div class="portfolio-block all girl">
-				<img src=assets/img/portfolio-2.jpg alt>
+				<img src="assets/img/portfolio-2.jpg" alt>
 			</div>
 			<div class="portfolio-block all lovers">
-				<img src=assets/img/portfolio-3.jpg alt>
+				<img src="assets/img/portfolio-3.jpg" alt>
 			</div>
 			<div class="portfolio-block all guy">
-				<img src=assets/img/portfolio-4.jpg alt>
+				<img src="assets/img/portfolio-4.jpg" alt>
 			</div>
 			<div class="portfolio-block all chef">
-				<img src=assets/img/portfolio-5.jpg alt>
+				<img src="assets/img/portfolio-5.jpg" alt>
 			</div>
 			<div class="portfolio-block all lovers">
-				<img src=assets/img/portfolio-6.jpg alt>
+				<img src="assets/img/portfolio-6.jpg" alt>
 			</div>
 			<div class="portfolio-block all lovers">
-				<img src=assets/img/portfolio-7.jpg alt>
+				<img src="assets/img/portfolio-7.jpg" alt>
 			</div>
 			<div class="portfolio-block all girl">
-				<img src=assets/img/portfolio-8.jpg alt>
+				<img src="assets/img/portfolio-8.jpg" alt>
 			</div>
 			<div class="portfolio-block all girl">
-				<img src=assets/img/portfolio-9.jpg alt>
+				<img src="assets/img/portfolio-9.jpg" alt>
 			</div>
 			<div class="portfolio-block all chef">
-				<img src=assets/img/portfolio-10.jpg alt>
+				<img src="assets/img/portfolio-10.jpg" alt>
 			</div>
 		</div>
 		<div class=container>
