add scroll top element

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<img class="fixed-gift wow pulse infinite" src="assets/img/gift.png" alt>
-	<header class="header">
+	<header id="up" class="header">
 		<div class="container">
 			<div class="col-md-2 col-sm-3 col-xs-6">
 				<button class="burger">
@@ -756,6 +756,11 @@
 			</div>
 		</div>
 	</div>
+	<a href="#up" class="pageup">
+    <svg class="up" viewBox="0 0 26 26" fill="#fff" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M26 0H0V26H26V0ZM4.6593 17.7519L13.1233 10.33L21.5873 17.7519L22.9059 16.2481L13.7826 8.24813L13.1233 7.67L12.464 8.24813L3.3407 16.2481L4.6593 17.7519Z" fill="black"/>
+    </svg>
+	</a>
 	<script src="script.js"></script>
 	<script src="assets/js/aos.js"></script>
 	<script>
